added calculation logic

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <div id="2" class="num buttons">2</div>
             <div id="3" class="num buttons">3</div>
             <div id="0" class="num buttons">0</div>
-            <div id="." class="num buttons">.</div>
-            <div id="clear" class="num buttons">AC</div>
+            <div id="." class="num decimal">.</div>
+            <div id="clear" class="num">AC</div>
           </div>
           <div id="equals-container">
             <div id="equals">=</div>
